--- a/clone.css
+++ b/clone.css
@@ -1,15 +1,15 @@
 
-
+html{
+    overflow-x:hidden;
+}
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Mulish', sans-serif;
     transition: 0.4s;
-    overflow-x:'hidden'
+    overflow-x:hidden;
 }
-
-
-body{overflow-x:'hidden';}
+body{
+    margin: 0;
+}
 
 nav {
     height: 80px;
