--- a/media.css
+++ b/media.css
@@ -461,7 +461,8 @@
 @media (max-width: 490px) {
 
     .process {
-        height: 1500px;
+        height: auto;
+        padding-bottom: 10px;
     }
 }
 
